# OmniServe

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
